# llms

./: .gitignore  docker-compose.yml  pyproject.toml  setup.py
llms/: llms.json  main.py  providers.json
llms/extensions/app/themes/blue_smoke/: theme.json
llms/extensions/app/themes/light_sky/: theme.json
llms/extensions/app/themes/light_slate/: theme.json
llms/extensions/app/themes/matrix/: theme.json
llms/extensions/app/themes/nord/: theme.json
llms/extensions/app/themes/soft_pink/: theme.json
llms/extensions/app/ui/: threadStore.mjs
llms/extensions/providers/: anthropic.py
llms/extensions/skills/ui/: index.mjs
llms/extensions/system_prompts/ui/: index.mjs
llms/extensions/tools/ui/: index.mjs
llms/ui/: ai.mjs  app.css  ctx.mjs
llms/ui/modules/chat/: index.mjs
