[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llms-py"
version = "3.0.43"
description = "A lightweight CLI tool and OpenAI-compatible server for querying multiple Large Language Model (LLM) providers"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "ServiceStack", email = "team@servicestack.net"}
]
maintainers = [
    {name = "ServiceStack", email = "team@servicestack.net"}
]
keywords = ["llm", "ai", "openai", "anthropic", "google", "gemini", "groq", "mistral", "ollama", "cli", "server", "chat", "completion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Environment :: Console",
]
requires-python = ">=3.7"
dependencies = [
    "aiohttp"
]

[project.urls]
Homepage = "https://github.com/ServiceStack/llms"
Documentation = "https://github.com/ServiceStack/llms#readme"
Repository = "https://github.com/ServiceStack/llms"
"Bug Reports" = "https://github.com/ServiceStack/llms/issues"

[project.scripts]
llms = "llms.main:main"

[tool.setuptools]
packages = ["llms"]

[tool.setuptools.package-data]
llms = ["index.html", "llms.json", "providers.json", "providers-extra.json", "extensions/**/*", "ui/**/*"]

[tool.ruff]
# Set the target Python version
target-version = "py37"

# Set line length
line-length = 120

# Enable auto-fixing
fix = true

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["llms"]

[tool.ruff.lint.per-file-ignores]
# Ignore all errors in publish.py and test_package.py
"publish.py" = ["ALL"]
"test_package.py" = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"
